[gd_scene load_steps=18 format=2]

[ext_resource path="res://Textures/Entities/Ingensavis/LegL.png" type="Texture" id=1]
[ext_resource path="res://Textures/Entities/Ingensavis/Body.png" type="Texture" id=2]
[ext_resource path="res://Textures/Entities/Ingensavis/LegR.png" type="Texture" id=3]
[ext_resource path="res://Textures/Entities/Ingensavis/WingL.png" type="Texture" id=4]
[ext_resource path="res://Textures/Entities/Ingensavis/WingR.png" type="Texture" id=5]
[ext_resource path="res://Prefabs/Entities/Ingensavis/Ingensavis.gd" type="Script" id=6]
[ext_resource path="res://Components/Collision/Hitbox/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/Managers/HealthManager/HealthManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://Components/Collision/Attackbox/Attackbox.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=8]
resource_name = "Death"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Body/LegL:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ 20.0, 75.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Body/LegR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ -40.0, 25.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/Body/WingL:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ 45.0, -25.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visuals/Body/WingR:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ 15.0, -35.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Visuals/Body/WingL2:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ -90.0, -140.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Visuals/Body/WingR2:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ 55.0, 110.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Visuals/Body:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ -10.0, 30.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Visuals/Body:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Dive"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 0.4, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 0.7 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/Body/WingL:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ 40.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visuals/Body/WingR:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ -40.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Visuals/Body/WingL2:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ -75.0, -25.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Visuals/Body/WingR2:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ 75.0, 25.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Flap"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Body/WingL:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.6, 1, 1 ),
"update": 0,
"values": [ -25.0, 5.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Body/WingR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.6, 1, 1 ),
"update": 0,
"values": [ 25.0, -5.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/Body/WingL2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 2, 1, 1 ),
"update": 0,
"values": [ -55.0, -20.0, -25.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visuals/Body/WingR2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 2, 1, 1 ),
"update": 0,
"values": [ 55.0, 20.0, 25.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Visuals/Body/LegL:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ 25.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Visuals/Body/LegR:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ -25.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Visuals/Body:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Visuals/Body:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.35, 1 ),
"update": 0,
"values": [ -15.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.196078, 0.160784, 0.278431, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Body/WingL:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visuals/Body/WingR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visuals/Body/WingL2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -25.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visuals/Body/WingR2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 25.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Visuals/Body/LegL:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Visuals/Body/LegR:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Visuals/Body:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Visuals/Body:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Visuals/Body:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=3]
height = 12.0

[sub_resource type="CircleShape2D" id=4]
radius = 21.0238

[sub_resource type="CircleShape2D" id=6]
radius = 12.0

[node name="Ingensavis" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 6 )

[node name="Visuals" type="Node2D" parent="."]

[node name="Body" type="Sprite" parent="Visuals"]
texture = ExtResource( 2 )

[node name="LegL" type="Sprite" parent="Visuals/Body"]
position = Vector2( -8, 15 )
texture = ExtResource( 1 )
offset = Vector2( -1, 8 )

[node name="LegR" type="Sprite" parent="Visuals/Body"]
position = Vector2( 7, 15 )
texture = ExtResource( 3 )
offset = Vector2( 1, 8 )

[node name="WingL" type="Sprite" parent="Visuals/Body"]
position = Vector2( -8, -1 )
z_index = -1
texture = ExtResource( 4 )
offset = Vector2( -24, -4 )

[node name="WingL2" type="Sprite" parent="Visuals/Body"]
position = Vector2( -10, 12 )
rotation = -0.436332
z_index = -1
texture = ExtResource( 4 )
offset = Vector2( -24, -4 )

[node name="WingR" type="Sprite" parent="Visuals/Body"]
position = Vector2( 9, -2 )
texture = ExtResource( 5 )
offset = Vector2( 24, -4 )

[node name="WingR2" type="Sprite" parent="Visuals/Body"]
position = Vector2( 10, 13 )
rotation = 0.436332
texture = ExtResource( 5 )
offset = Vector2( 24, -4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 8 )
anims/Dive = SubResource( 7 )
anims/Flap = SubResource( 1 )
anims/Hit = SubResource( 5 )
anims/RESET = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 3 )

[node name="HealthManager" parent="." instance=ExtResource( 8 )]
max_health = 65

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
health_manager = NodePath("../HealthManager")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 6 )
shape = SubResource( 4 )

[node name="Attackbox" parent="." instance=ExtResource( 9 )]
ignore = NodePath("../Hitbox")
damage = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attackbox"]
position = Vector2( 0, 19 )
shape = SubResource( 6 )

[connection signal="health_depleted" from="HealthManager" to="." method="_on_HealthManager_health_depleted"]
[connection signal="on_hit" from="Hitbox" to="." method="_on_Hitbox_on_hit"]
